--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2402.00847.pdf" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://openaccess.thecvf.com/content/ACCV2024/papers/Doersch_BootsTAP_Bootstrapped_Training_for_Tracking-Any-Point_ACCV_2024_paper.pdf" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
@@ -136,8 +136,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#download-checkpoints"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#download-checkpoints" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -145,14 +144,14 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#colab-demo"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#colab-demo" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fab fa-github"></i>
+                      <img src="https://colab.research.google.com/img/colab_favicon_256px.png" 
+                           alt="Colab" width="16" height="16">
                     </span>
-                    <span>Colab Demos</span>
+                    <span>Colab</span>
                   </a>
-                </span> 
+                </span>
               </div>
             </div>
           </div>
