--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#download-checkpoints" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#checkpoints" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
