--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="container is-max-desktop">
         <div class="is-centered">
           <div class="has-text-centered">
-            <h1 class="title is-1 publication-title">BootsTAP: Bootstrapped Training <br>for Tracking-Any-Point</h1>
+            <h2 class="title is-2 publication-title">BootsTAP: Bootstrapped Training <br>for Tracking-Any-Point</h2>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="http://www.carldoersch.com">Carl Doersch</a><sup>1</sup>,
@@ -182,7 +182,7 @@
       <!-- Abstract. -->
       <div class="is-centered has-text-centered">
         <div class="is-four-fifths">
-          <h2 class="title is-3">Abstract</h2>
+          <h3 class="title is-3">Abstract</h3>
           <div class="content has-text-justified">
             <p>
               To endow models with greater understanding of physics and motion, it is useful to enable them to perceive how solid surfaces move and deform in real scenes. This can be formalized as Tracking-Any-Point (TAP), which requires the algorithm to be able to track any point corresponding to a solid surface in a video, potentially densely in space and time. Large-scale ground-truth training data for TAP is only available in simulation, which currently has limited variety of objects and motion. In this work, we demonstrate how large-scale, unlabeled, uncurated real-world data can improve a TAP model with minimal architectural changes, using a self-supervised student-teacher setup. We demonstrate state-of-the-art performance on the TAP-Vid benchmark surpassing previous results by a wide margin: for example, TAP-Vid-DAVIS performance improves from 61.3% to 67.4%, and TAP-Vid-Kinetics from 57.2% to 62.5%.
@@ -198,7 +198,7 @@
     <div class="container is-max-desktop">
       <div class="is-centered has-text-centered">
         <div class="is-four-fifths">
-          <h2 class="title is-3">Video Summary</h2>
+          <h3 class="title is-3">Video Summary</h3>
           <div class="publication-video">
             <video id="summary" playsinline controls height="100%">
               <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2_1.mp4" type="video/mp4">
@@ -210,11 +210,13 @@
     </div>
   </section>
 
-  <!-- TAP-Vid DAVIS -->
-  <section class="hero is-small">
+  <section class="section">
     <div class="container is-max-desktop">
       <div class="is-centered has-text-centered">
         <div class="is-four-fifths">
+          <h3 class="title is-3">Video Comparisons</h3>
+          
+          <!-- TAP-Vid DAVIS -->
           <div class="hero-body-justified"><b>TAP-Vid DAVIS:</b> We plot TAPIR and BootsTAP points alongside their ground truth, sampling query points using the query-first approach.
             The main
             improvements come from more accurate occlusion prediction
@@ -282,8 +284,6 @@
                   </div>
                 </div>
               </div>
-
-
 
               <!-- Card 3 -->
               <div class="card">
@@ -393,23 +393,13 @@
 
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
-
-  <!-- RoboTAP -->
-  <section class="hero is-small">
-    <div class="container is-max-desktop">
-      <div class="is-centered has-text-centered">
-        <div class="is-four-fifths">
+          <!-- RoboTAP -->
           <div class="hero-body-justified"><b>RoboTAP:</b> We show some examples from the RoboTAP dataset where BootsTAPIR improves performance.
-          We use the same plotting scheme as for TAP-Vid-DAVIS, as there is ground truth available in this dataset.</div>
+            We use the same plotting scheme as for TAP-Vid-DAVIS, as there is ground truth available in this dataset.
+          </div>
           <div class="container" id="container-carousel 2">
             <div id="results-carousel 2" class="carousel results-carousel">
-
-
               <!-- Card 1 -->
               <div class="card">
                 <div class="card-image">
@@ -538,30 +528,16 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
-
-
-
-  <!-- Libero -->
-  <section class="hero is-small">
-    <div class="container is-max-desktop">
-      <div class="is-centered has-text-centered">
-        <div class="is-four-fifths">
+          <!-- Libero -->
           <div class="hero-body-justified"><b>Libero:</b> In this experiment, we apply TAPIR (left), BootsTAPIR (center), and
             a BootsTAPIR further finetuned on Libero (BootsTAPIR-Libero) to Libero videos.  This dataset has
             no ground truth, so we apply the algorithms to query points sampled in a semi-dense grid on the first
             frame.  We see that BootsTAP on internet data improves performance, especially scale invariance, but
             training specifically on Libero improves results even further.
           </div>
-
           <div class="container" id="container-carousel 2">
             <div id="results-carousel 2" class="carousel results-carousel">
-
-
               <!-- Card 1 -->
               <div class="card">
                 <div class="card-image">
@@ -697,18 +673,8 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
-
-  <!-- RoboCAT-NIST -->
-  <section class="hero is-small">
-    <div class="container is-max-desktop">
-      <div class="is-centered has-text-centered">
-        <div class="is-four-fifths">
-          <h2 class="title is-3">Video Comparisons</h2>
+          <!-- RoboCAT-NIST -->
           <div class="hero-body-justified"><b>RoboCAT-NIST:</b> In this study, we apply both TAPIR (left) and BootsTAPIR (right) to very
             challenging sequences of NIST gear insertion, as viewed from the gripper camera. Due to the lack of texture
             and the rotational symmetry, the correspondence is difficult to perceive, leading to many failures from the original
@@ -720,68 +686,57 @@
           </div>
           <div class="container" id="container-carousel 2">
             <div id="results-carousel 2" class="carousel results-carousel">
-              <!-- Card 1 -->
               <div class="card">
                 <div class="card-image">
-                  <table style="width: 100%;">
+                  <table style="width: 100%; border-spacing: 0;">
                     <tr>
-                      <td style="text-align: center; width: 50%;">TAPIR</td>
-                      <td style="text-align: center; width: 50%;">BootsTAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">TAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">BootsTAPIR</td>
                     </tr>
                   </table>
-                  <!-- <figure class="image is-16by9 is-covered"> -->
-                  <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
+                  <video style="width: 100%; height: auto;" autoplay controls muted loop playsinline>
                     <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/large_scale_change.mp4" type="video/mp4">
                   </video>
-                  <!-- </figure> -->
                 </div>
                 <div class="card-content">
                   <div class="item__description">
                     A common failure mode of TAPIR is large changes in scale; the scale invariances learned on Kubric
-                    data
-                    may not generalize to real-world data. BootsTAPIR often fixes these issues.
+                    data may not generalize to real-world data. BootsTAPIR often fixes these issues.
                   </div>
                 </div>
               </div>
-
-              <!-- Card 2 -->
+  
               <div class="card">
                 <div class="card-image">
-                  <table style="width: 100%;">
+                  <table style="width: 100%; border-spacing: 0;">
                     <tr>
-                      <td style="text-align: center; width: 50%;">TAPIR</td>
-                      <td style="text-align: center; width: 50%;">BootsTAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">TAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">BootsTAPIR</td>
                     </tr>
                   </table>
-                  <!-- <figure class="image is-16by9 is-covered"> -->
-                  <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
+                  <video style="width: 100%; height: auto;" autoplay controls muted loop playsinline>
                     <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/textureless_regions.mp4" type="video/mp4">
                   </video>
-                  <!-- </figure> -->
                 </div>
                 <div class="card-content">
                   <div class="item__description">
                     Large textureless regions can cause jittery predictions from TAPIR, but BootsTAPIR integrates
-                    context
-                    better.
+                    context better.
                   </div>
                 </div>
               </div>
-
-              <!-- Card 3 -->
+  
               <div class="card">
                 <div class="card-image">
-                  <table style="width: 100%;">
+                  <table style="width: 100%; border-spacing: 0;">
                     <tr>
-                      <td style="text-align: center; width: 50%;">TAPIR</td>
-                      <td style="text-align: center; width: 50%;">BootsTAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">TAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">BootsTAPIR</td>
                     </tr>
                   </table>
-                  <!-- <figure class="image is-16by9 is-covered"> -->
-                  <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
+                  <video style="width: 100%; height: auto;" autoplay controls muted loop playsinline>
                     <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/lighting_invariance.mp4" type="video/mp4">
                   </video>
-                  <!-- </figure> -->
                 </div>
                 <div class="card-content">
                   <div class="item__description">
@@ -790,45 +745,38 @@
                   </div>
                 </div>
               </div>
-
-              <!-- Card 4 -->
+  
               <div class="card">
                 <div class="card-image">
-                  <table style="width: 100%;">
+                  <table style="width: 100%; border-spacing: 0;">
                     <tr>
-                      <td style="text-align: center; width: 50%;">TAPIR</td>
-                      <td style="text-align: center; width: 50%;">BootsTAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">TAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">BootsTAPIR</td>
                     </tr>
                   </table>
-                  <!-- <figure class="image is-16by9 is-covered"> -->
-                  <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
+                  <video style="width: 100%; height: auto;" autoplay controls muted loop playsinline>
                     <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/occlusion_invariance.mp4" type="video/mp4">
                   </video>
-                  <!-- </figure> -->
                 </div>
                 <div class="card-content">
                   <div class="item__description">
                     Large occlusions for objects unlike those in Kubric can cause TAPIR to lose tracks, while BootsTAPIR
-                    has
-                    better invariance.
+                    has better invariance.
                   </div>
                 </div>
               </div>
-
-              <!-- Card 5 -->
+  
               <div class="card">
                 <div class="card-image">
-                  <table style="width: 100%;">
+                  <table style="width: 100%; border-spacing: 0;">
                     <tr>
-                      <td style="text-align: center; width: 50%;">TAPIR</td>
-                      <td style="text-align: center; width: 50%;">BootsTAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">TAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">BootsTAPIR</td>
                     </tr>
                   </table>
-                  <!-- <figure class="image is-16by9 is-covered"> -->
-                  <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
+                  <video style="width: 100%; height: auto;" autoplay controls muted loop playsinline>
                     <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/sudden_fast_motion.mp4" type="video/mp4">
                   </video>
-                  <!-- </figure> -->
                 </div>
                 <div class="card-content">
                   <div class="item__description">
@@ -836,21 +784,18 @@
                   </div>
                 </div>
               </div>
-
-              <!-- Card 6 -->
+  
               <div class="card">
                 <div class="card-image">
-                  <table style="width: 100%;">
+                  <table style="width: 100%; border-spacing: 0;">
                     <tr>
-                      <td style="text-align: center; width: 50%;">TAPIR</td>
-                      <td style="text-align: center; width: 50%;">BootsTAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">TAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">BootsTAPIR</td>
                     </tr>
                   </table>
-                  <!-- <figure class="image is-16by9 is-covered"> -->
-                  <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
+                  <video style="width: 100%; height: auto;" autoplay controls muted loop playsinline>
                     <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/large_motion_small_object.mp4" type="video/mp4">
                   </video>
-                  <!-- </figure> -->
                 </div>
                 <div class="card-content">
                   <div class="item__description">
@@ -859,27 +804,23 @@
                   </div>
                 </div>
               </div>
-
-              <!-- Card 7 -->
+  
               <div class="card">
                 <div class="card-image">
-                  <table style="width: 100%;">
+                  <table style="width: 100%; border-spacing: 0;">
                     <tr>
-                      <td style="text-align: center; width: 50%;">TAPIR</td>
-                      <td style="text-align: center; width: 50%;">BootsTAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">TAPIR</td>
+                      <td style="text-align: center; padding: 0; width: 50%;">BootsTAPIR</td>
                     </tr>
                   </table>
-                  <!-- <figure class="image is-16by9 is-covered"> -->
-                  <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
+                  <video style="width: 100%; height: auto;" autoplay controls muted loop playsinline>
                     <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/complex_motion.mp4" type="video/mp4">
                   </video>
-                  <!-- </figure> -->
                 </div>
                 <div class="card-content">
                   <div class="item__description">
                     This example combines many of the aforementioned challenges, and BootsTAPIR does a good job of
-                    tracking
-                    the gear nevertheless.
+                    tracking the gear nevertheless.
                   </div>
                 </div>
               </div>
@@ -889,15 +830,12 @@
       </div>
     </div>
   </section>
-
-
-  <section class="hero is-small">
+  
+  <section class="section">
     <div class="container is-max-desktop">
       <div class="is-centered has-text-centered">
         <div class="is-four-fifths">
- 
-          <h4 class="title is-3">Some other cool projects using TAP</h2>
-
+          <h3 class="title is-3">Related Work</h3>
           <div class="content has-text-justified">
             <p>
               <a href="https://deepmind-tapir.github.io/">TAPIR</a> is the foundational visual 
@@ -917,6 +855,7 @@
       </div>
     </div>
   </section>
+
   <!--   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
@@ -929,6 +868,7 @@
         }</code></pre>
     </div>
   </section> -->
+
   <footer class="footer">
     <div class="container">
       <div class="is-centered">
