--- a/index.html
+++ b/index.html
@@ -218,15 +218,7 @@
           
           <!-- TAP-Vid DAVIS -->
           <div class="hero-body-justified"><b>TAP-Vid DAVIS:</b> We plot TAPIR and BootsTAP points alongside their ground truth, sampling query points using the query-first approach.
-            The main
-            improvements come from more accurate occlusion prediction
-            and more precise localization. In addition, we observe that BootsTAPIR is more robust to large scale changes
-            than the baseline TAPIR model.  In the displays, we don't plot points that the methods mark as occluded.  We include
-            a line segment connecting the ground truth to the prediction where the ground truth is marked visible, showing the scale
-            of the errors.  If a method predicts a point as visible when the ground truth is occluded, we plot the prediction with an x.
-            Note that some points begin very close to
-            object boundaries which means the methods occasionally track the wrong object.
-            For this and other visualizations, the algorithm tracks on videos downsampled to 256-by-256; we plot them on the original resolution only for appearance.
+            The main improvements come from more accurate occlusion prediction and more precise localization. In addition, we observe that BootsTAPIR is more robust to large scale changes than the baseline TAPIR model. In the displays, we don't plot points that the methods mark as occluded. We include a line segment connecting the ground truth to the prediction where the ground truth is marked visible, showing the scale of the errors. If a method predicts a point as visible when the ground truth is occluded, we plot the prediction with an x. Note that some points begin very close to object boundaries which means the methods occasionally track the wrong object. For this and other visualizations, the algorithm tracks on videos downsampled to 256-by-256; we plot them on the original resolution only for appearance.
           </div>
           <div class="container" id="container-carousel 2">
             <div id="results-carousel 2" class="carousel results-carousel">
